--- a/projetos/Projeto_Pratico/style.css
+++ b/projetos/Projeto_Pratico/style.css
@@ -11,11 +11,9 @@ body {
 }
 
 header {
-    background-image: url('img/familia.jpg');
-    background-size: cover; /* A imagem cobre todo o header */
-    background-position: center; /* A imagem é centralizada no header */
-    height: 250px; /* Altura do header */
-    color: rgb(81, 27, 198); /* Cor do texto no header */
+    background-color: blue;
+    height: 250px;
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,8 +21,9 @@ header {
     text-align: center;
 }
 
-header h1, header p {
-    margin: 0;
+header p, h1 {
+
+    font-size: 40px;
 }
 
 nav {
