--- a/projetos/Projeto_Pratico/style.css
+++ b/projetos/Projeto_Pratico/style.css
@@ -7,7 +7,13 @@
 
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 12px;
+}
 
+@media screen and (max-width:600px){
+    body {
+        font-size: 10px;
+    }
 }
 
 header {
@@ -23,7 +29,13 @@ header {
 
 header p, h1 {
 
-    font-size: 40px;
+    font-size: 30px;
+}
+
+@media screen and (max-width:300px){
+    header p, h1 {
+        font-size: 10px;
+    }
 }
 
 nav {
