--- a/style.css
+++ b/style.css
@@ -13,9 +13,15 @@ body {
     background-image: linear-gradient(to bottom, rgb(32, 11, 137), rgb(14, 94, 137));
     color: white;
     text-align: center;
-    font-size: 10px;
+    font-size: 12px;
     margin: 30px;
 
+}
+
+@media screen and (max-width:600px){
+    body {
+        font-size: 8px;
+    }
 }
 
 body img {
