--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 body {
 
-    width: 100%;
-    height: 100vh;
+    width: auto;
+    height: 91.8vh;
     background-image: linear-gradient(to bottom, rgb(32, 11, 137), rgb(14, 94, 137));
     color: white;
     text-align: center;
@@ -18,7 +18,7 @@ body {
 
 }
 
-@media screen and (max-width:600px){
+@media screen and (max-width:300px){
     body {
         font-size: 8px;
     }
